	format".

	* magick/utility.c (MagickSpawnVP): Verify that file argument is
	non-NULL and not empty.

2013-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/tiff/LIBRARY.txt: Fix pre-processor definitions for
	libtiff so that they use multiple statements rather than one long
	statement.  Resolves SourceForge issue 3601001 "libtiff won't
	compile with ICL".

2013-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/memory.h (MagickAllocateAlignedArray): New macro to wrap
	use of MagickMallocAlignedArray().

	* magick/memory.c (MagickMallocAlignedArray): New private function
	to support safe allocation of an array in memory with a specified
	alignment.  Allocation may only be freed using MagickFreeAligned()
	and the allocation may not be reallocated.

2013-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/{animate.c,display.c,utility.c}: Only invoke chdir() if
	path is not an empty string.  Previously sometimes chdir() was
	passed an empty string (because chdir() was not needed) and this
	was ok because we ignored the error status.  Now that we check the
	chdir() error status, some X11 GUI functions (e.g. save file to
	current directory) encounter annoying issues.

	* magick/shear.c (IntegralRotateImage): Limit integral rotate to
	two threads.

	* coders/pnm.c (ReadPNMImage): Limit PNM reader to two threads.

2013-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac (MAGICK_FEATURES): MinGW static build does not
	build modules so MODULES feature should not be listed as
	supported.  Resolves MinGW test failures.

	* coders/dpx.c (OrientationTypeToDPXOrientation): Return U16 type
	as stored in DPX format.

	* coders/cineon.c: Add support for reading/writing 'orientation'
	setting.

	* coders/mpc.c: Add support for reading/writing 'orientation'
	setting.

	* coders/miff.c: Add support for reading/writing 'orientation'
	setting.

	* Rotate ChangeLog for 2012 and update web page copyright years.
